--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
+<html>
+<title>Images</title>
 <body>
+<table border="2px" align="center">
+<tr>
+<th colspan="5px" style="height: 30px;">KL.Rahul</th>
+</tr>
+<tr>
+<th><img style="width: 150px; height:200px;" src="https://w0.peakpx.com/wallpaper/545/93/HD-wallpaper-kl-rahul-india-cricket-thumbnail.jpg"></th>
+<th></th>
+<th><img style="width: 150px; height:200px;" src="https://c.ndtvimg.com/2024-10/ofcb5448_cas_625x300_24_October_24.jpg?im=FeatureCrop,algorithm=dnn,width=806,height=605"></th>
+<th></th>
+ 
+<th><img style="width: 150px; height:200px;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSazq6TJjJSqr3OAqg0AjR1qXIGmcL7BLfvcw&s"></th>          
+</tr>
+ 
+            <tr>
+<td>
+ 
+                </td>
+<td><img style="width: 150px; height:200px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_w_1200,q_50/lsci/db/PICTURES/CMS/387000/387057.jpg"></td>
+<td></td>
+<td><img style="width:150px;height:200px" src="https://i.pinimg.com/originals/85/84/2a/85842a90f2a616af014cd40821aca4dc.jpg"></td>
+<td></td>    
+</tr>
+ 
+            <tr>
+<td><img style="width: 150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZliNj4fIzpKeyl69MOiL55rod9a0a2Ejhw&s"></td>
+<td></td>
 
-<h1>static Website !!!!!!!!</h1>
-<p>A website created by kishore.</p>
-<p>A website created</p>
+<td><img style="width:150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp01qe68m0uFB_7vEZVDAjRDoi9oe4aHz3Ew&s"></td>
+<td></td>
+<td><img style="width:150px;height:200px;" src="https://wallpapercave.com/wp/wp8127082.jpg"></td>    
+</tr>
+</table>
 </body>
 </html>
+ 
+ 
