--- a/index.html
+++ b/index.html
@@ -1,39 +1,282 @@
-<html>
-<title>Images</title>
+<!DOCTYPE html>
+<html lang="en">
+ 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h2 {
+            text-align: center;
+        }
+ 
+        .pic {
+           display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+ 
+        .nav {
+            text-align: center;
+ 
+        }
+ 
+        .border {
+            border: 1px dashed orangered;
+            margin: 5px 30px 5px 30px;
+        }
+ 
+        table,
+        th,
+        td {
+            border: 3px solid green;
+            border-collapse: collapse;
+        }
+ 
+        table {
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+ 
+        .goals {
+            width: 100px;
+            height: 400px;
+            padding: 5px;
+ 
+ 
+ 
+        }
+ 
+        .goals1 {
+            display: flex;
+            justify-content: space-evenly;
+        }
+ 
+        #one {
+            margin: 20px 0px 0px 0px;
+        }
+ 
+        #pic {
+            border-radius: 10px;
+        }
+ 
+        #mnbv {
+            display: flex;
+            justify-content: space-evenly;
+            list-style-type: none;
+        }
+ 
+        p,
+        td,
+        th,
+        li {
+            font-size: large;
+        }
+ 
+        th,
+        td {
+            padding: 20px;
+        }
+    </style>
+</head>
+ 
 <body>
-<table border="2px" align="center">
-<tr>
-<th colspan="5px" style="height: 30px;">KL.Rahul</th>
-</tr>
-<tr>
-<th><img style="width: 150px; height:200px;" src="https://w0.peakpx.com/wallpaper/545/93/HD-wallpaper-kl-rahul-india-cricket-thumbnail.jpg"></th>
-<th></th>
-<th><img style="width: 150px; height:200px;" src="https://c.ndtvimg.com/2024-10/ofcb5448_cas_625x300_24_October_24.jpg?im=FeatureCrop,algorithm=dnn,width=806,height=605"></th>
-<th></th>
+    <h2><b>SUSTAINABLE DEVELOPEMENT</b></h2>
+    <img style="border-radius: 8px;" src="https://hi-static.z-dn.net/files/d14/712158cc4a1dd4c8ed36f6399bc8133e.jpg"
+        alt="go green" height="150px" width="150px">
+    <ul id="mnbv">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#difference">DIFFERENCE</a></li>
+        <li><a href="#start">START SUTAINABLE LIVING</a></li>
+        <li><a href="#impact">IMPACT</a></li>
+        <li><a href="#what">WHAT PEOPLE CAN DO?</a></li>
+        <li><a href="#goals">GOALS</a></li>
+    </ul>
  
-<th><img style="width: 150px; height:200px;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSazq6TJjJSqr3OAqg0AjR1qXIGmcL7BLfvcw&s"></th>          
-</tr>
+    <br>
+    <img class="pic"
+        src="https://www.berlinsbi.com/uploads/sites/2/2023/11/Tips-for-Sustainable-Living-During-the-Winter.jpg"
+        alt="pic2" width="1000px" height="400px">
+    <div class="border" style="padding: 30px;" id="home">
+        <h2 style="padding: 0px 0px 20px 0px;">WHAT IS SUSTAINABLE LIVING?</h2>
+        <p>Sustainable living is a lifestyle that aims to reduce one's environmental impact, in ways
+            that are sustainable both for the Earth and for the person. So while pledging to never run your
+            faucet again may be sustainable for the planet, it probably wouldn't be sustainable for you
+            personally (or for your friends who would be subject to your poor hygiene).</p>
+        <p>There are endless ways to live sustainably, including: reducing your use of resources,
+            composting, relying on clean energy sources, reducing your consumption of single-use plastic,
+            eating less animal products, shopping for clothing and other items sustainably, buying local,
+            and more.</p>
+    </div>
+    <div style="padding: 30px;">
+        <h2 style="padding: 0px 0px 20px 0px;" id="difference">SUSTAINABLE LIVING VS ZERO WASTE --- DIFFERENCE? WHAT'S
+            THE</h2>
+        <p>Sustainable living and the zero-waste movement have similar goals and many similar lifestyle patterns, but
+            are a little bit different.
+            Those trying to live sustainably aim to lower their overall environmental impact in a variety of ways,
+            while the primary focus of
+            those living zero-waste is typically to reduce the amount of trash they produce, namely single-use
+            plastic.
+        </p>
+        <p>For example, someone whose primary goal is to live zero-waste and produce zero trash may be comfortable
+            eating meat that was
+            purchased without any plastic. But someone aiming to live a well-rounded, sustainable lifestyle may consider
+            the bigger picture
+            (aka the massive environmental impact and ethical concerns of animal agriculture) and opt for a plant-based
+            meal instead, even
+            if it is packaged in plastic.
+        </p>
  
-            <tr>
-<td>
+    </div>
+    <div style="padding: 30px;">
+        <h2 style="padding: 0px 0px 20px 0px;" id="start">How to start Sustainable living?</h2>
+        <p>There are numerous ways to start living more sustainably and a sustainable lifestyle
+            looks different for
+            everyone. Areas where you can
+            reduce your impact include:</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Eating a Plant-Based Diet</th>
+                    <th>Composting</th>
+                    <th>Reducing Single-Use Plastic</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Animal products like meat, dairy, and eggs are the highest-impact foods on Earth. To lower your
+                        diet's footprint, consider transitioning to a vegan diet, or at least eating more vegan meals.
+                        Along with this, it's important to focus on wasting less food.</td>
+                    <td>Instead of sending food scraps (that includes things like vegetable peels, avocado pits, and
+                        spoiled leftovers) to landfill, start composting. Composting is the process of returning
+                        anything that comes from nature to the earth, and letting it biodegrade into soil. Setting up a
+                        compost bin is super easy if you have a backyard, but it's also possible if you live in an
+                        apartment or in a city with no yard.</td>
+                    <td>Instead of sending food scraps (that includes things like vegetable peels, avocado pits, and
+                        spoiled leftovers) to landfill, start composting. Composting is the process of returning
+                        anything that comes from nature to the earth, and letting it biodegrade into soil. Setting up a
+                        compost bin is super easy if you have a backyard, but it's also possible if you live in an
+                        apartment or in a city with no yard.</td>
+                </tr>
+            </tbody>
  
-                </td>
-<td><img style="width: 150px; height:200px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_w_1200,q_50/lsci/db/PICTURES/CMS/387000/387057.jpg"></td>
-<td></td>
-<td><img style="width:150px;height:200px" src="https://i.pinimg.com/originals/85/84/2a/85842a90f2a616af014cd40821aca4dc.jpg"></td>
-<td></td>    
-</tr>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Transportation</th>
+                        <th>Shopping</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>If you drive a gas-powered car every day, consider alternatives with lower emissions if they
+                            are
+                            available to you. For example, try walking, riding a bike, taking public transportation,
+                            carpooling, or investing in an electric or hybrid car when you need a new one. Additionally,
+                            many environmentalists have given up flying in airplanes (such as Greta Thunberg) due to the
+                            high environmental footprint, so consider traveling by train instead of by air when
+                            possible.
+                        </td>
+                        <td>The most sustainable form of shopping is not to shop at all and the second most sustainable
+                            form
+                            (and more realistic form) of shopping is shopping secondhand.
+                            Before buying anything new, check out your local thrift store, websites and apps like
+                            Poshmark,
+                            Craigslist, or eBay, or your local Buy Nothing group on Facebook. When it comes to items
+                            that
+                            you can't buy secondhand, seek out companies that make products from natural or recycled
+                            materials while following sustainable business practices.
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </table>
+    </div>
+    <div style="padding: 30px;">
+        <h2 style="padding: 0px 0px 20px 0px;">IMPORTANCE</h2>
+        <p>With climate change becoming a more serious problem every day, it's now more important than ever for people
+            to do
+            their part to reduce their
+            environmental impact. Demanding lawmakers and corporations institute laws or policies to help with that is
+            extremely important, but lowering
+            your personal impact can make a huge difference as well.
+        </p>
+    </div>
+    <div class="border" style="padding: 30px;">
+        <h2 style="padding: 0px 0px 20px 0px;" id="impact">IMPACT OF SUSTAINABLE LIVING?</h2>
+        <p>The average American produces 4.4 pounds of trash per day, according to the EPA -that comes out to more than
+            1,600 pounds per year. So by transitioning to a zero-waste lifestyle, you could literally save thousands of
+            pounds of trash from going to landfills, where it would emit harmful greenhouse gases.</p>
+        <p>By eating a vegan or plant-based diet, every year, you can save: 401,500 gallons of water, 14,600 pounds of
+            grain; 10,950 square feet of forest, 7,300 pounds of CO2, and 365 animal lives, according to the Vegan
+            Calculator.</p>
+        <p>While it may seem like small changes such as going zero-waste or vegan won't really make a difference,
+            looking at those statistics make it clear that sustainability lifestyle changes can be powerful.</p>
+    </div>
+    <h2 style="padding: 30px;" id="what"><b>WHAT PEOPLE CAN DO?</b></h2>
+    <ol>
+        <li><b>Grow Food</b></li>
+        <p>Growing some of your own food. Start a vegetable or herb garden, and plant a fruit tree or even two. This
+            will save tonnes of transport greenhouse gases because the food will be right outside your door.</p>
+        <li><b>Preserve Food</b></li>
+        <p>Did you know that preserving food by pickling, drying or bottling is better than freezing in a refrigerator.
+        </p>
+        <p>Why? Because it uses less energy than the refrigerator.</p>
+        <li><b>Reduce Waste</b></li>
+        <p>Gases such as carbon dioxide and methane are released into the atmosphere from waste disposal sites. This
+            adds to the greenhouse effect and global warming. Dangerous materials also leaking from rubbish dumps and
+            pollute waterways and soil from rubbish dumps.</p>
+        <li><b>Insulate houses</b></li>
+        <p>Insulate houses to reduce the amount of energy needed to heat and cool the house. Trees planted around the
+            house will shade it during hot weather.
+        </p>
+        <p>Some people are covering roofs with living plants to stop the house warming or cooling too quickly.</p>
+        <li><b>Use Public Transport</b></li>
+        <p>Use public transport whenever you can to reduce the amount of gases from petrol powered cars. Ride your bike!
+        </p>
+        <div class="border">
+            <h2>SUSTAINABLE DEVELOPMENT GOALS</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDPgiO5szpVKL6mVIfwjbg53E_NmmB82KRYAZzLG5Z_LpCqcQZ"
+                alt="Leave No One Behind" width="400px" height="300px" style="padding: 0px 0px 0px 140px;">
+            <p>The Sustainable Development Goals are the blueprint to achieve a better and more sustainable future for
+                all. They address the global challenges we face, including poverty, inequality, climate change,
+                environmental degradation, peace and justice. Learn more and take action.</p>
  
-            <tr>
-<td><img style="width: 150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZliNj4fIzpKeyl69MOiL55rod9a0a2Ejhw&s"></td>
-<td></td>
-
-<td><img style="width:150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp01qe68m0uFB_7vEZVDAjRDoi9oe4aHz3Ew&s"></td>
-<td></td>
-<td><img style="width:150px;height:200px;" src="https://wallpapercave.com/wp/wp8127082.jpg"></td>    
-</tr>
-</table>
+        </div>
+        <h2>The 5 Goals</h2>
+        <div class="goals1" id="goals">
+            <div class="goals" id="one">
+                <h3>Goal 1</h3>
+                <img src="https://i.pinimg.com/1200x/b4/b9/cc/b4b9ccb74ce05ca31a0c2efe2f6.jpg" alt=" ">
+                <p>End poverty in all its form.</p>
+            </div>
+            <div class="goals">
+                <h3>Goal 2</h3>
+                <img src="https://i.pinimg.com/1200x/b4/b9/cc/b4b9ccb74ce05ca31a0c2efe2f6.jpg" alt=" ">
+                <p>The food and agriculture sector offers key solutions for development, and is central for hunger and
+                    poverty eradication.</p>
+            </div>
+            <div class="goals">
+                <h3>Goal 3</h3>
+                <img src="https://i.pinimg.com/1200x/b4/b9/cc/b4b9ccb74ce05ca31a0c2efe2f6.jpg" alt=" ">
+                <p>Ensuring healthy lives and promoting the well-being for all at all ages is essential to sustainable
+                    development.</p>
+            </div>
+            <div class="goals">
+                <h3>Goal 4</h3>
+                <img src="https://i.pinimg.com/1200x/b4/b9/cc/b4b9ccb74ce05ca31a0c2efe2f6.jpg" alt=" ">
+                <p>Obtaining a quality education is the foundation to improving people's lives and sustainable
+                    development.
+                </p>
+            </div>
+            <div class="goals">
+                <h3>Goal 5</h3>
+                <img src="https://i.pinimg.com/1200x/b4/b9/cc/b4b9ccb74ce05ca31a0c2efe2f6.jpg" alt=" ">
+                <p>Gender equality is not only a fundamental human right, but a necessary foundation for a peaceful,
+                    prosperous and sustainable, world</p>
+            </div>
+        </div>>
+ 
 </body>
 </html>
- 
  
